販売実績と天気・実績データの同期（完了）